re PR c++/10381 (Accepts call to inexistent function)

PR c++/10381
	* parser.c (cp_parser_primary_expression): Reorganize logic for
	dealing with name lookup failures.

	PR c++/10381
	* g++.dg/parse/lookup3.C: New test.

From-SVN: r65656